--- a/media.css
+++ b/media.css
@@ -193,3 +193,18 @@
         bottom: 5%;
     }
 }
+@media(min-width:320px) and (max-width:400px){
+    .position_div {
+        width: 30%;
+    }
+}
+@media(min-width:401px) and (max-width:480px){
+    .position_div {
+        width: 24%;
+    }
+}
+@media(min-width:768px) and (max-width:991px){
+    .position_div {
+        width: 28%;
+    }
+}
