--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ font-family: 'Bebas Neue', cursive;
 }
 .header_content p{
     margin-top: 5px;
-    font-size: 12px;
+    font-size: 15px;
     font-family: 'Bebas Neue', cursive;
 }
                                              /* top header part end */
@@ -42,7 +42,7 @@ font-family: 'Bebas Neue', cursive;
     border: none;
 }                                            /* Nav header part start */
 .navbar-nav .nav-item .nav-link{
-    font-size: 15px;
+    font-size: 18px;
     letter-spacing: 1px;
     margin-right: 25px;
     font-family: 'Bebas Neue', cursive;
@@ -53,9 +53,9 @@ font-family: 'Bebas Neue', cursive;
                                               /* Banner part start */
 .banner p{
     margin-top: 30px;
-    width: 70%;
+    display: inline-block;
     text-align: center;
-    padding: 0px 10px;
+    padding: 0px 5px;
     border: 2px dashed black;
     font-family: 'Bebas Neue', cursive;
 }
@@ -79,7 +79,8 @@ font-family: 'Bebas Neue', cursive;
     width: 100%;
 }
 .position_div{
-    width: 20%;
+    width: 110px;
+    height: 110px;
     padding: 10px;
     text-align: center;
     background-color: #BF2222;
@@ -92,6 +93,7 @@ font-family: 'Bebas Neue', cursive;
     padding: 15px 18px;
     border-radius: 50%;
     border: 1px dashed white;
+    margin-bottom: 15px;
 }
 .position_content h2{
     font-size: 16px;
@@ -125,6 +127,12 @@ font-family: 'Bebas Neue', cursive;
     font-weight: 500;
     font-family: 'Bebas Neue', cursive;
 }
+.burger1_content h5{
+    font-size: 18px;
+}
+.burger1_content h6{
+    font-size: 30px;
+}
 .burger2_img{
     position: relative;
 }
@@ -141,13 +149,13 @@ font-family: 'Bebas Neue', cursive;
 
 .burger2_content h6, .burger3_content h6{
     margin: 0;
-    font-size: 24px;
+    font-size: 30px;
     letter-spacing: 1px;
     font-family: 'Bebas Neue', cursive;
 }
 .burger2_content h5, .burger3_content h5{
     margin: 0;
-    font-size: 16px;
+    font-size: 18px;
     letter-spacing: 1px;
     font-family: 'Bebas Neue', cursive;
 }
@@ -157,6 +165,7 @@ font-family: 'Bebas Neue', cursive;
     font-size: 20px;
     padding: 5px 0;
     background-color: #FFC045;
+    border-radius: 0px 6px 0px 6px;
     font-family: 'Bebas Neue', cursive;
 }
 .choce h1{
@@ -180,24 +189,25 @@ font-family: 'Bebas Neue', cursive;
     padding: 0;
     text-decoration: none;
     background-color: #BF2222;
+    border: 1px solid #BF2222;
     font-size: 13px;
     color: white;
     padding: 7px 25px;
     font-family: 'Alfa Slab One', cursive;
+    transition: .4s all ease-in-out;
+    border-radius: 7px 0px 7px 0px;
+}
+.choce a:hover{
+   background: transparent;
+   color: black;
 }
 .choce .img2{
     width: 93%;
 }
 .slide{
-    margin-top: 150px;
-    margin-bottom: 30px;
+    margin-top: 100px;
 }
-.slide_shadow{
-    box-shadow: 2px 8px 30px 30px #ecebeb;
-    padding: 15px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-}
+
 .slide h5{
     margin-top: 50px;
     letter-spacing: 1px;
@@ -217,7 +227,7 @@ font-family: 'Bebas Neue', cursive;
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 70%;
+    top: 80%;
     left: 15%;
     transform: translateX(-50%);
 }
@@ -239,22 +249,14 @@ font-family: 'Bebas Neue', cursive;
     background-color: #F69165;
 }
 .form{
-    position: relative;
+    background-image: url("img/table_img.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
 }
-.position_img_1{
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.position_img_2{
-    position: absolute;
-    top: 70%;
-    left: 15%;  
-}
-.position_img_3{
-    position: absolute;
-    top: 0;
-    right: 0; 
+.form_row{
+    padding-top: 150px;
 }
 .form h5{
     margin: 0;
@@ -275,6 +277,7 @@ form input::placeholder{
 form input[type="submit"]{
     transition: .5s all ease-in-out;
     color: white;
+    border: 1px solid #BF2222;
     background-color: #BF2222;
     font-family: 'Bebas Neue', cursive;
 }
@@ -283,12 +286,12 @@ form input[type="submit"]:hover{
     color: black;
    background: transparent;
 }
+
 .footer{
     background-image: url("img/banner2.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-top: 300px;
     position: relative;
 }
 
@@ -317,6 +320,11 @@ form input[type="submit"]:hover{
 .footer_content2 h4{
     font-size: 19px;
 }
+.all_icon{
+    display: flex;
+    margin: 20px 0px;
+
+}
 .footer_icon1{
     width: 25px;
     height: 25px;
@@ -325,9 +333,7 @@ form input[type="submit"]:hover{
     justify-content: center;
     background-color: white;
     border-radius: 50%;
-    position: absolute;
-    right: 2%;
-    bottom: 5%;
+    margin-right: 15px;
 }
 .footer_icon2{
     width: 25px;
@@ -337,9 +343,7 @@ form input[type="submit"]:hover{
     justify-content: center;
     background-color: white;
     border-radius: 50%;
-    position: absolute;
-    right: 5%;
-    bottom: 5%;
+    margin-right: 15px;
 }
 .footer_icon3{
     width: 25px;
@@ -349,9 +353,7 @@ form input[type="submit"]:hover{
     justify-content: center;
     background-color: white;
     border-radius: 50%;
-    position: absolute;
-    right: 8%;
-    bottom: 5%;
+    margin-right: 15px;
 }
 .footer_icon4{
     width: 25px;
@@ -361,9 +363,7 @@ form input[type="submit"]:hover{
     justify-content: center;
     background-color: white;
     border-radius: 50%;
-    position: absolute;
-    right: 11%;
-    bottom: 5%;
+    margin-right: 15px;
 }
 .footer_icon1 a, .footer_icon2 a, .footer_icon3 a, .footer_icon4 a{
     text-decoration: none;
