--- a/style.css
+++ b/style.css
@@ -24,6 +24,73 @@ font-family: 'Bebas Neue', cursive;
 .topbtn i:hover{
     background: #f39c12;
 }
+    /* end of back to */
+
+.social-fixed ul{
+    display: flex;
+    list-style: none;
+    padding: 21px 12px;
+    margin: 0;
+    background: #F7DC4F;
+    flex-direction: column;
+    align-items: center;
+}
+.social-fixed ul li{
+    margin: auto;
+    margin-bottom: 12px;
+}
+.social-fixed ul li a{
+    color: rgb(0, 0, 0);
+}
+.social-fixed ul li a i{
+    transition: .35s all ease-in-out;
+    font-size: 18px;
+}
+.fa-facebook-f:hover, .fa-twitter:hover, .fa-instagram:hover, .fa-youtube:hover{
+    color: rgb(34, 148, 255);
+}
+        
+.java .social-fixed{
+    right: 0px;
+    z-index: 0;
+    top: 50%;
+    transform:translateY(-50%);
+}
+.java .indicator{
+    right: 44px;
+}
+.indicator{
+    right: 0px;
+    background: #F7DC4F;
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: .25s all ease-in-out;
+    cursor: pointer;
+    z-index: 0;
+}
+.indicator i{
+    color: #000;
+    padding: 16px;
+    font-size: 23px;
+    animation: rgb 5s linear infinite;
+    transform: rotate(0);
+}
+@keyframes rgb{
+    100%{
+        transform: rotate(360deg);
+    }
+}
+.social-fixed{
+    right: -44px;
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: .25s all ease-in-out;
+    z-index: 0;
+}
+
+    /* indicator */
 .main_section{
     background-color: #FFC149;
     min-height: 100vh;
@@ -419,6 +486,7 @@ form input[type="submit"]:hover{
     width: 100%;
     height: 100%;
     background: #FFC045;
+    z-index: 1;
 
 }
   
